# admin

./: .gitignore  BYLAWS.md  README.md  agenda_generator.py  pyproject.toml  test_agenda_generator.py
.github/workflows/: generate-agendas.yml  sync.yml
board/agendas/2024/: agenda_2024-09-23.md  agenda_2024-11-18.md  agenda_2024-12-23.md  agenda_2025-01-27.md
board/agendas/2025/: agenda_2025-01-27.md  agenda_2025-02-24.md  agenda_2025-03-24.md  agenda_2025-04-21.md  agenda_2025-05-26.md  agenda_2025-06-23.md  agenda_2025-06-24.md  agenda_2025-07-21.md  agenda_2025-08-25.md  agenda_2025-09-22.md  agenda_2025-10-27.md  agenda_2025-11-24.md  agenda_2025-12-22.md
board/agendas/2026/: agenda_2026-01-26.md  agenda_2026-02-23.md  agenda_2026-03-23.md  agenda_2026-04-27.md  agenda_2026-05-25.md  agenda_2026-05-26.md  agenda_2026-06-22.md
board/minutes/2024/: minutes_2024-10-21  minutes_2024-11-18.md  minutes_2024-12-23.md
board/minutes/2025/: 2025-09-08.md  minutes_2025-01-27.md  minutes_2025-02-24.md  minutes_2025-03-24.md  minutes_2025-04-01.md  minutes_2025-04-21.md  minutes_2025-04-21.md   minutes_2025-05-26.md  minutes_2025-06-23.md  minutes_2025-07-21.md  minutes_2025-08-25.md  minutes_2025-09-22.md  minutes_2025-10-27.md  minutes_2025-11-24.md  minutes_2025-12-22.md  minutes_2025_02_24.md  minutes_2025_04_01  minutes_2025_05_26.md
board/minutes/2026/: minutes_2026-01-26.md  minutes_2026-02-23.md  minutes_2026-03-23.md  minutes_2026-04-27.md  minutes_2026-05-26.md  minutes_2026-06-22.md  tech_2026-06-22.md  (+1 more)
templates/: board_meeting.j2  general_meeting.j2
(+43 files in other folders)
